# Stadera

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  release-please-config.json  release-please-manifest.json  rust-toolchain.toml
.claude/: CLAUDE.md
.claude/docs/: architecture.md  deploy-gcp-walkthrough.md  iac-walkthrough.md
.claude/docs/reviews/: pr-2.md
.github/: pull_request_template.md
.github/workflows/: apisec-scan.yml  ci.yml  deploy.yml  release-please.yml
.sqlx/: query-0530c402d6663799a0e82b420ad90d69aa896406f5f44d77c83f8d06b5f77cab.json  query-0b5e40707b8bcf65b49c50b1634718cc6292bed061df63ba45271b2a0e9b2262.json  query-200f694183eefe6dd3f5b60d4b7c9ad22856fd924daed1d2650c91b5ed145e55.json  query-23de7dc867fe20c4b61815856b2b3ed4b7b1112cac53180b2295d1018d7987fe.json  query-3d9508029d93b764fdd9bbcaf67c8885c19bc27cb9161584c757e11630866bb7.json  query-4d72f84abaec48414a2de7ef6d0eb79dce764838a3d49a9f10edf675653ecb8e.json  query-52bec23337f20ad572ad35129c1a105297cbe980145e7ac7d8a1bc96f7406e10.json  query-58b968e856b0bd5fc903449aaf9dd1b6258e7ce0436b5dc9bc0bd01ebbbf6c42.json  query-5db36b49e1561fbaca3b6b8dd9ce87a527334acb9427611908ec3ece608e2531.json  query-753c507e182401000b7e8838bd356c98b2488944be7ba833e5fe16f5373a99f0.json  query-86d9904a95c970eaedc22b9c4bbce7885f44a26ced8677d4095ce8fcfae497cb.json  query-90c9428f20c5247d864a3a31fa36ec0374160794b1aaf10e3e81340d990953e3.json  query-9cd2fcf3d09a675c5e9db8268f8cd77bb2e62cc34f0181652ae543c9068d2102.json  query-cbef1fc88f6399b9dfc0a59119edddbac7a3217c1ba4f943f5254977f455ab11.json  query-de2efe72d1af84119e1adab65eff7adcb3528675c76596c0be94530873e3a825.json  query-e12fcb7de2723458f833a3d03cd440d9ddcf8af6804ebba0881376690e740a82.json
crates/api/: CHANGELOG.md  Cargo.toml
crates/api/src/: config.rs  dto.rs  error.rs  lib.rs  main.rs  openapi.rs  state.rs
crates/api/src/auth/: cookies.rs  extractor.rs  google.rs  mod.rs
crates/api/src/routes/: auth.rs  health.rs  history.rs  me.rs  mod.rs  profile.rs  today.rs  trend.rs
crates/api/tests/: test_health.rs  test_me.rs  test_openapi.rs  test_profile.rs  test_today.rs  test_trend_history.rs
crates/api/tests/common/: mod.rs
crates/domain/: CHANGELOG.md  Cargo.toml  README.md
crates/domain/src/: energy.rs  error.rs  lib.rs  measurement.rs  trend.rs  units.rs  user.rs
crates/domain/tests/: test_energy.rs  test_measurement.rs  test_trend.rs  test_units.rs  test_user.rs
crates/jobs/: CHANGELOG.md  Cargo.toml
crates/jobs/src/: main.rs  sync.rs
crates/storage/: CHANGELOG.md  Cargo.toml  README.md
crates/storage/migrations/: 20260424192350_init.sql  20260425090000_measurement_idempotency.sql  20260425150000_sessions.sql
crates/storage/src/: error.rs  lib.rs  rows.rs
crates/storage/src/repositories/: measurement.rs  mod.rs  session.rs  user.rs  user_profile.rs  withings_credentials.rs
crates/storage/tests/: test_measurement_repo.rs  test_session_repo.rs  test_user_profile_repo.rs  test_user_repo.rs  test_withings_credentials_repo.rs
crates/withings/: CHANGELOG.md  Cargo.toml
crates/withings/src/: client.rs  crypto.rs  error.rs  lib.rs  oauth.rs  types.rs
crates/withings/tests/: test_client.rs  test_oauth.rs
terraform/: .gitignore  README.md  artifact_registry.tf  cloud_run.tf  cloud_scheduler.tf  iam_bindings.tf  locals.tf  main.tf  outputs.tf  service_accounts.tf  terraform.tfvars.example  variables.tf  wif.tf
