[workspace]
resolver = "2"
members = ["crates/api", "crates/domain", "crates/storage", "crates/withings"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/MicheleBellitti/stadera"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# database
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "uuid",
    "macros",
    "migrate",
] }
uuid = { version = "1", features = ["v7", "serde"] }
serde_json = "1"
# http client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
# oauth2 RFC 6749 client
oauth2 = "5"
# AEAD symmetric encryption for stored tokens
aes-gcm = "0.10"
rand = "0.9"
hex = "0.4"
# url parsing (callback handling in pair binary)
url = "2"
# CLI argument parsing for binaries
clap = { version = "4", features = ["derive"] }
# HTTP mocking for tests
wiremock = "0.6"
# .env auto-load for setup binaries
dotenvy = "0.15"
