[package]
name = "stadera-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
stadera-domain = { path = "../domain" }
stadera-storage = { path = "../storage" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
http-body-util.workspace = true
