[package]
name = "stadera-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
stadera-domain = { path = "../domain" }
stadera-storage = { path = "../storage" }
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
oauth2.workspace = true
reqwest.workspace = true
time.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
http-body-util.workspace = true
urlencoding = "2"
