[package]
name = "stadera-jobs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
stadera-domain = { path = "../domain" }
stadera-storage = { path = "../storage" }
stadera-withings = { path = "../withings" }
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
uuid.workspace = true
